# rust_practice

./: .gitignore
backend/: .gitignore  Cargo.toml
backend/src/: env.rs  local_db.rs  main.rs
backend/src/price_providers/: mod.rs
backend/src/price_providers/binance_price_provider/: binance_api.rs
backend/test_scripts/: queries.py
cache/: docker-compose.yml
