[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
redis = "0.24.0"
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = {version="1.0.217", features=["derive"]}
serde_json = "1.0.134"

[dev-dependencies]
mockito = "0.31"
assert_float_eq = "1"
mockall = "0.13.1"
serial_test = "2.0"
